--- a/.github/workflows/esegui-r.yml
+++ b/.github/workflows/esegui-r.yml
@@ -23,4 +23,4 @@ jobs:
 
       - name: Run carburanti script
         run: |
-          Rscript script/mio_script_DATAWRAPPER.R
+          Rscript DATAWRAPPER.R
