--- a/.github/workflows/esegui-r.yml
+++ b/.github/workflows/esegui-r.yml
@@ -2,9 +2,9 @@ name: Esegui script prezzi carburanti
 
 on:
   schedule:
-    # Tutti i giorni alle 07:05 UTC ≈ 08:05 in Italia (in inverno)
+    # Tutti i giorni alle 07:05 UTC ≈ 08:05 in Italia in inverno
     - cron: "5 7 * * *"
-  workflow_dispatch:  # ti permette di lanciarlo a mano
+  workflow_dispatch:  # per lanciarlo a mano
 
 jobs:
   run-r-script:
@@ -13,16 +13,18 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
 
+      # QUI installiamo e cache-iamo i pacchetti
       - name: Installa (e cache) i pacchetti R
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: |
-            DatawRappr
+            github::munichrocker/DatawRappr
             readr
             dplyr
             stringr
